--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- THANK YOU CONTAINER -->
     <div id="thank-you-container-none">
-      <img src="./images/illustration-thank-you.svg" alt="" class="thank-you-img">
+      <img src="./images/illustration-thank-you.svg" alt="Phone and card with reciept" class="thank-you-img">
       <div class="selected">
         You selected <span id="user-rating"><!--POPULATED WITH JAVACSRIPT--></span> out of 5
       </div>
@@ -48,7 +48,7 @@
       <img src="./images/frontEndMentorIconTransparent.png" alt="Frontend Mentor icon"width="25px">
     </a>
     <img style="margin: 0 -8px; opacity: 0.4;" src="./images/separator.png" alt="" width="25px">
-    <a style="text-decoration: none;" target="_blank" href="https://github.com/MoggStephen/">
+    <a style="text-decoration: none;" target="_blank" href="https://github.com/MoggStephen/interactive-rating-component-main">
       <img src="./images/githubIconTransparent.png" alt="Github icon" width="25px">
     </a>
   </footer>
