--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   <!-- LINKS FOOTER -->
   <footer class="links" style="position: fixed;bottom: 0;width: 100%;text-align: center;">
     <a style="text-decoration: none;" target="_blank" href="https://www.frontendmentor.io/profile/MoggStephen">
-      <img src="./images/frontEndMentorIconTransparent.png" alt="Frontend Mentor icon"width="25px">
+      <img src="./images/frontEndMentorIconTransparent.png" alt="Frontend Mentor icon" width="25px">
     </a>
-    <img style="margin: 0 -8px; opacity: 0.4;" src="./images/separator.png" alt="" width="25px">
+    <img style="margin: 0 -8px; opacity: 0.4;" src="./images/separator.png" alt="seperator line" width="25px">
     <a style="text-decoration: none;" target="_blank" href="https://github.com/MoggStephen/interactive-rating-component-main">
       <img src="./images/githubIconTransparent.png" alt="Github icon" width="25px">
     </a>
